--- a/form.html
+++ b/form.html
@@ -7,26 +7,43 @@
     <link rel="stylesheet" href="form.css">
     <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <script src="form.js"></script>
   </head>
 
   <body>
-    <div id="Form">
-      <h1 class="mdc_typography--display3"> Form </h1>
+    <div id="form">
+      <h1 class="mdc_typography--display3" id="data"> Form </h1>
       <form>
-        First Name of Doctor:
-        <input type="text" name = "doctorfirstname"><br>
-        Last Name of Doctor:
-        <input type="text" name = "doctorlastname"><br>
-        First Name of Patient:
-        <input type="text" name = "patientfirstname"><br>
-        Last Name of Patient:
-        <input type="text" name = "patientlastname"><br>
-        Diagnosis:
-        <input type="text" name = "diagnosis"><br>
-        Date of Diagnosis:
-        <input type="text" name = "diagnosisdate"><br>
-        Start of Condition:
-        <input type="text" name = "conditionstart"><br>
+        <div id="doctorfirstname">
+          First Name of Doctor:
+          <input type="text" name = "doctorfirstname"><br>
+        </div>
+        <div id="doctorlastname">
+          Last Name of Doctor:
+          <input type="text" name = "doctorlastname"><br>
+        </div>
+        <div id="patientfirstname">
+          First Name of Patient:
+          <input type="text" name = "patientfirstname"><br>
+        </div>
+        <div id="patientlastname">
+          Last Name of Patient:
+          <input type="text" name = "patientlastname"><br>
+        </div>
+        <div id="diagnosis">
+          Diagnosis:
+          <input type="text" name = "diagnosis"><br>
+        </div>
+        <div id="diagnosisdate">
+          Date of Diagnosis:
+          <input type="text" name = "diagnosisdate"><br>
+        </div>
+        <div id="conditionstart">
+          Start of Condition:
+          <input type="text" name = "conditionstart"><br>
+        </div>
+        <button type="submit">Submit</button>
       </form>
     </div>
   </body>
