--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
           Start of Condition:
           <input type="text" name = "conditionstart"><br>
         </div>
-        <button action="submitted.html" type="submit">Submit</button>
+        <button type="submit">Submit</button>
       </form>
     </div>
   </body>
