--- a/form.html
+++ b/form.html
@@ -44,6 +44,14 @@
           Start of Condition:
           <input type="text" name = "conditionstart"><br>
         </div>
+        <div class = "submission" id="drphone">
+          Doctor Phone Number:
+          <input type="text" name = "drphone"><br>
+        </div>
+        <div class = "submission" id="patientphone">
+          Patient Phone Number:
+          <input type="text" name = "patientphone"><br>
+        </div>
         <button type="submit">Submit</button>
       </form>
     </div>
