--- a/testIntury.html
+++ b/testIntury.html
@@ -6,10 +6,7 @@
     <title>InChain</title>
     <script>
         function handleThings() {
-            var xmlHttp = new XMLHttpRequest();
-            xmlHttp.open( "GET", "http://35.196.237.62/okay", false ); // false for synchronous request
-            xmlHttp.send( null );
-            return xmlHttp.responseText;
+            var xmlHttp = new XMLHttpRequest();xmlHttp.open( 'GET', 'http://35.196.237.62/okay', false );xmlHttp.send( null );return xmlHttp.responseText;
         }
     </script>
   </head>
