--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
   <body>
     <div id="form" onsubmit="return false">
       <h1 class="mdc_typography--display3" id="data"> Form </h1>
-      <form name = "data" id="data" >
+      <form>
         <div id="doctorfirstname">
           First Name of Doctor:
           <input type="text" name = "doctorfirstname"><br>
@@ -44,7 +44,7 @@
           Start of Condition:
           <input type="text" name = "conditionstart"><br>
         </div>
-        <button type="submit">Submit</button>
+        <button action="submitted.html" type="submit">Submit</button>
       </form>
     </div>
   </body>
